@@ -70,6 +70,21 @@ class TestGemCommandsSpecificationCommand < RubyGemTestCase
     assert_equal '', @ui.error
   end
 
+  def test_execute_marshal
+    foo = quick_gem 'foo'
+    Gem.source_index.add_spec foo
+
+    @cmd.options[:args] = %w[foo]
+    @cmd.options[:format] = :marshal
+
+    use_ui @ui do
+      @cmd.execute
+    end
+
+    assert_equal foo, Marshal.load(@ui.output)
+    assert_equal '', @ui.error
+  end
+
   def test_execute_remote
     foo = quick_gem 'foo'
 
@@ -90,6 +105,22 @@ class TestGemCommandsSpecificationCommand < RubyGemTestCase
 
     assert_match %r|\A--- !ruby/object:Gem::Specification|, @ui.output
     assert_match %r|name: foo|, @ui.output
+  end
+
+  def test_execute_ruby
+    foo = quick_gem 'foo'
+    Gem.source_index.add_spec foo
+
+    @cmd.options[:args] = %w[foo]
+    @cmd.options[:format] = :ruby
+
+    use_ui @ui do
+      @cmd.execute
+    end
+
+    assert_match %r|Gem::Specification.new|, @ui.output
+    assert_match %r|s.name = %q\{foo\}|, @ui.output
+    assert_equal '', @ui.error
   end
 
 end
